--- a/Index.html
+++ b/Index.html
@@ -80,7 +80,7 @@
                     <footer class="blockquote-footer">Arthur C. Clarke </footer>
                 </blockquote>
                 <hr>
-                <p>When I was a young child, I remember taking computer classes. I can distinctly remember thinking that computers and software was like magic. I became fascinated with understanding how computers worked, and making computers work for me. That passion drove me to pursue a career in IT, and a degree in Computer Programming. I hope to recreate a bit of that magic with each piece of code I write.
+                <p>When I was a young child, I remember taking computer classes. I can distinctly remember thinking that computers and software were like magic; I became fascinated with understanding how computers worked, and making them work for me. That passion drove me to pursue a career in IT and a degree in Computer Programming. I hope to recreate a bit of that magic with each piece of code I write.
 
                     <small class="text-muted">-Julian A. Jones</small>
 
@@ -114,4 +114,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
-</body></html>
+</body>
+
+</html>
