--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="Index.html">Home
+                    <a class="nav-link" href="index.html">Home
 
                     </a>
                 </li>
@@ -118,4 +118,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
 
-</body></html>
+</body>
+
+</html>
