--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link active" href="Index.html">Home
+                    <a class="nav-link active" href="index.html">Home
 
                     </a>
                 </li>
