--- a/About.html
+++ b/About.html
@@ -93,6 +93,21 @@
                 <br>
                 <br>
                 <br>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <br>
+                    <a href="About.html">About Me</a>
+                    <br>
+                    <a href="Skills.html">Skills and Technolgies</a>
+                    <br>
+                    <a href="Links.html">LinkedIn and GitHub Links</a>
+                    <br>
+                    <a href="Form.html">Contact Me!</a>
+
+
+
+                </nav>
+                <hr>
 
                 <footer>Site Designed by Julian A. Jones</footer>
 
@@ -118,6 +133,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
 
-</body>
-
-</html>
+</body></html>
