--- a/Skills.html
+++ b/Skills.html
@@ -108,6 +108,21 @@
                 <br>
                 <br>
                 <br>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <br>
+                    <a href="About.html">About Me</a>
+                    <br>
+                    <a href="Skills.html">Skills and Technolgies</a>
+                    <br>
+                    <a href="Links.html">LinkedIn and GitHub Links</a>
+                    <br>
+                    <a href="Form.html">Contact Me!</a>
+
+
+
+                </nav>
+                <hr>
 
                 <footer>Site Designed by Julian A. Jones</footer>
 
@@ -134,6 +149,4 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
-</body>
-
-</html>
+</body></html>
