--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -19,6 +19,7 @@
         <a class="navbar-brand" href="index.html">Julian A. Jones</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+
         </button>
 
         <div class="collapse navbar-collapse" id="navbarColor01">
@@ -104,6 +105,22 @@
                 <br>
                 <br>
                 <br>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <br>
+                    <a href="About.html">About Me</a>
+                    <br>
+                    <a href="Skills.html">Skills and Technolgies</a>
+                    <br>
+                    <a href="Links.html">LinkedIn and GitHub Links</a>
+                    <br>
+                    <a href="Form.html">Contact Me!</a>
+
+
+
+                </nav>
+                <hr>
+
 
                 <footer>Site Designed by Julian A. Jones</footer>
 
