--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="alert alert-dismissible alert-warning">
 
         <h4 class="alert-heading">Attention!</h4>
-        <p class="mb-0">I am aware that the navbar is broken for mobile users, and I am working to resolve this issue.</p>
+        <p class="mb-0">I am aware that the top navbar is broken for mobile users, and I am working to resolve this issue. In the meantime, I have added a footer navigation pane for mobile and desktop users.</p>
     </div>
 
 
