--- a/About.html
+++ b/About.html
@@ -98,7 +98,7 @@
                     <br>
                     <a href="About.html">About Me</a>
                     <br>
-                    <a href="Skills.html">Skills and Technolgies</a>
+                    <a href="Skills.html">Skills and Technologies</a>
                     <br>
                     <a href="Links.html">LinkedIn and GitHub Links</a>
                     <br>
@@ -133,4 +133,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
 
-</body></html>
+</body>
+
+</html>
